added first style

--- a/index2.html
+++ b/index2.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    
+<body><div>
+    <h3>My First Website</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse itaque neque optio, quidem est saepe, quaerat ducimus totam maxime officia ratione ex culpa cum aspernatur rerum perferendis expedita laborum suscipit.</p>
+
+</div>
 </body>
 </html>
