added a list to push code

--- a/index2.html
+++ b/index2.html
@@ -23,6 +23,18 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse itaque neque optio, quidem est saepe, quaerat ducimus totam maxime officia ratione ex culpa cum aspernatur rerum perferendis expedita laborum suscipit.</p>
     
     </div>
+    <div>
+        <h3>
+            how to push incremental code
+        </h3>
+        <ul>
+            <li>
+                git add .
+            </li>
+           <li>git commit</li>
+           <li>git push</li>
+        </ul>
+    </div>
     
 </body>
 </html>
